[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.7", features = ["derive", "env", "wrap_help"] }
crossbeam-channel = "0.5.7"
ctrlc = { version = "3.2.5", features = ["termination"] }
httparse = "1.7.1"
httpdate = "1.0.2"
mime_guess = "2.0.4"
scoped_threadpool = "0.1.9"
time = { version = "0.3.20", features = ["macros", "local-offset", "formatting"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "time"] }
